--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/" title="Homepage">
+        <a href="index.html" title="Homepage">
           <img
             src="images/logo.png"
             class="logo d-none d-md-block"
@@ -46,16 +46,16 @@
         </a>
         <ul>
           <li>
-            <a href="/" title="Homepage"> Home</a>
+            <a href="index.html" title="Homepage"> Home</a>
           </li>
           <li class="active">
-            <a href="/about.html" title="About Patricia"> About</a>
+            <a href="about.html" title="About Patricia"> About</a>
           </li>
           <li>
-            <a href="/work.html" title="Patricia's work"> Work</a>
+            <a href="work.html" title="Patricia's work"> Work</a>
           </li>
           <li>
-            <a href="/contact.html" title="Contact Patricia"> Contact</a>
+            <a href="contact.html" title="Contact Patricia"> Contact</a>
           </li>
         </ul>
       </nav>
@@ -71,7 +71,7 @@
               I’m open to work remotely and have flexible hours. I’m highly
               skilled in JavaScript and React.
             </p>
-            <a href="/work.html" class="btn btn-branding">See my projects</a>
+            <a href="work.html" class="btn btn-branding">See my projects</a>
           </div>
         </div>
         <div class="col-lg-6">
@@ -87,7 +87,7 @@
         </div>
         <div>
           <a
-            href="/contact.html"
+            href="contact.html"
             class="btn btn-branding mt-3"
             title="Contact Patricia"
           >
@@ -97,30 +97,30 @@
       </div>
       <div class="d-flex justify-content-center mb-5">
         <a
-          href="mailto:patricia@gmail.com"
+          href="mailto:iortyomqueen17@gmail.com"
           class="email-link"
           title="Email Patricia"
         >
-          patricia@gmail.com
+          iortyomqueen17@gmail.com
         </a>
       </div>
       <div class="social-links d-flex justify-content-center">
         <a
-          href="https://www.github.com/patricia"
+          href="https://www.github.com/Cuwein"
           target="_blank"
           title="GitHub Profile"
         >
           <i class="fab fa-github"></i>
         </a>
         <a
-          href="https://www.instragram.com/patricia"
+          href="https://www.instragram.com/__torkwase_"
           target="_blank"
           title="instragram Profile"
         >
           <i class="fab fa-instagram"></i>
         </a>
         <a
-          href="https://www.twitter.com/patricia"
+          href="https://www.twitter.com/Qwin❤"
           target="_blank"
           title="Twitter Profile"
         >
@@ -128,9 +128,9 @@
         </a>
       </div>
       <p class="text-center mt-5">
-        ✌️ This website was coded by Patricia Pereira, and is
+        ✌️ This website was coded by Iortyom Torkwase Queen, and is
         <a
-          href="https://github.com/matthieua/portfolio-project"
+          href="https://github.com/Cuwein/portfolio-project-seo"
           target="_blank"
         >
           open-sourced
