--- a/contact.html
+++ b/contact.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Contact Patricia. Patricia is a front-end engineer based in Portugal. "
+      content="Contact Queen. Queen Front-end developer, based in Nigeria. "
     />
-    <title>Contact Patricia - Patricia Pereira</title>
+    <title>Contact Queen - Queen Iortyom</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -36,7 +36,7 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/" title="Homepage">
+        <a href="index.html" title="Homepage">
           <img
             src="images/logo.png"
             class="logo d-none d-md-block"
@@ -50,16 +50,16 @@
         </a>
         <ul>
           <li>
-            <a href="/" title="Homepage"> Home</a>
+            <a href="index.html" title="Homepage"> Home</a>
           </li>
           <li>
-            <a href="/about.html" title="About Patricia"> About</a>
+            <a href="about.html" title="About Patricia"> About</a>
           </li>
           <li>
-            <a href="/work.html" title="Patricia's work"> Work</a>
+            <a href="work.html" title="Patricia's work"> Work</a>
           </li>
           <li class="active">
-            <a href="/contact.html" title="Contact Patricia"> Contact</a>
+            <a href="contact.html" title="Contact Queen"> Contact</a>
           </li>
         </ul>
       </nav>
@@ -69,18 +69,18 @@
         <h1 class="mb-5">Let's get in touch!</h1>
         <h3>Email</h3>
         <p>
-          <a href="mailto:patricia@gmail.com"> patricia@gmail.com </a>
+          <a href="mailto:iortyomqueen17@gmail.com">
+            iortyomqueen17@gmail.com
+          </a>
         </p>
         <h3>Twitter</h3>
         <p>
-          <a href="https://www.twitter.com/patricia" target="_blank">
-            @patricia
-          </a>
+          <a href="https://www.twitter.com/Qwin❤" target="_blank"> @Qwin❤ </a>
         </p>
         <h3>Instagram</h3>
         <p>
-          <a href="https://www.instagram.com/patricia.codes" target="_blank">
-            @patricia.codes
+          <a href="https://www.instagram.com/__torkwase_" target="_blank">
+            @__torkwase_
           </a>
         </p>
       </div>
@@ -93,9 +93,9 @@
         </div>
         <div>
           <a
-            href="/contact.html"
+            href="contact.html"
             class="btn btn-branding mt-3"
-            title="Contact Patricia"
+            title="Contact Queen"
           >
             Contact me
           </a>
@@ -103,30 +103,30 @@
       </div>
       <div class="d-flex justify-content-center mb-5">
         <a
-          href="mailto:patricia@gmail.com"
+          href="mailto:iortyomqueen17@gmail.com"
           class="email-link"
-          title="Email Patricia"
+          title="Email Queen"
         >
-          patricia@gmail.com
+          iortyomqueen17@gmail.com
         </a>
       </div>
       <div class="social-links d-flex justify-content-center">
         <a
-          href="https://www.github.com/patricia"
+          href="https://www.github.com/Cuwein"
           target="_blank"
           title="GitHub Profile"
         >
           <i class="fab fa-github"></i>
         </a>
         <a
-          href="https://www.instragram.com/patricia"
+          href="https://www.instragram.com/__torkwase_"
           target="_blank"
           title="instragram Profile"
         >
           <i class="fab fa-instagram"></i>
         </a>
         <a
-          href="https://www.twitter.com/patricia"
+          href="https://www.twitter.com/Qwin❤"
           target="_blank"
           title="Twitter Profile"
         >
@@ -134,9 +134,9 @@
         </a>
       </div>
       <p class="text-center mt-5">
-        ✌️ This website was coded by Patricia Pereira, and is
+        ✌️ This website was coded by Iortyom Torkwase Queen, and is
         <a
-          href="https://github.com/matthieua/portfolio-project"
+          href="https://github.com/Cuwein/portfolio-project-seo"
           target="_blank"
         >
           open-sourced
