--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SheCodes Portfolio</title>
+    <title>Iortyom Queen's Portfolio</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -49,13 +49,13 @@
             <a href="index.html" title="Homepage"> Home</a>
           </li>
           <li class="active">
-            <a href="about.html" title="About Patricia"> About</a>
+            <a href="about.html" title="About Queen"> About</a>
           </li>
           <li>
-            <a href="work.html" title="Patricia's work"> Work</a>
+            <a href="work.html" title="Queen's work"> Work</a>
           </li>
           <li>
-            <a href="contact.html" title="Contact Patricia"> Contact</a>
+            <a href="contact.html" title="Contact Queen"> Contact</a>
           </li>
         </ul>
       </nav>
@@ -64,8 +64,8 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="content">
-            <h1 class="mb-4">Hi, I’m Patricia Pereira</h1>
-            <h2 class="mb-4">Front-end developer based in Portugal</h2>
+            <h1 class="mb-4">Hi, I’m Iortyom Torkwase Queen</h1>
+            <h2 class="mb-4">Front-end developer based in Nigeria</h2>
             <p class="mb-5">
               I’m currently seeking new opportunities in front-end development.
               I’m open to work remotely and have flexible hours. I’m highly
@@ -89,7 +89,7 @@
           <a
             href="contact.html"
             class="btn btn-branding mt-3"
-            title="Contact Patricia"
+            title="Contact Queen"
           >
             Contact me
           </a>
@@ -99,7 +99,7 @@
         <a
           href="mailto:iortyomqueen17@gmail.com"
           class="email-link"
-          title="Email Patricia"
+          title="Email Queen"
         >
           iortyomqueen17@gmail.com
         </a>
