--- a/index.html
+++ b/index.html
@@ -53,21 +53,21 @@
             <a href="index.html" title="Homepage"> Home</a>
           </li>
           <li>
-            <a href="about.html" title="About Patricia"> About</a>
+            <a href="about.html" title="About Queen"> About</a>
           </li>
           <li>
-            <a href="work.html" title="Patricia's work"> Work</a>
+            <a href="work.html" title="Queen's work"> Work</a>
           </li>
           <li>
-            <a href="contact.html" title="Contact Patricia"> Contact</a>
+            <a href="contact.html" title="Contact Queen"> Contact</a>
           </li>
         </ul>
       </nav>
     </div>
     <div class="hero">
       <p>👋 Hello, I'm</p>
-      <h1>Patricia Pereira</h1>
-      <h2 class="mb-5">Front-end developer based in Portugal</h2>
+      <h1>Iortyom Torkwase Queen</h1>
+      <h2 class="mb-5">Front-end developer based in Nigeria</h2>
       <div>
         <a href="contact.html" class="btn btn-branding" title="Contact me"
           >Contact me</a
@@ -79,20 +79,20 @@
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
           <img
-            src="images/yogurt.png"
+            src="images/puff.png"
             class="img-fluid"
-            alt="Yogurt project preview"
+            alt="puff project preview"
           />
         </div>
         <div class="col">
           <div class="project-desciption">
-            <h2 class="mb-5">Yogurt Landing Page</h2>
+            <h2 class="mb-5">Puff Puff Landing Page</h2>
             <p class="mb-5 text-muted">
               I entered the world of front-end development by gaining some
               knowledge in HTML, CSS, and JavaScript. I used my knowledge of
               these languages, along with my new skills in VS Code, to build a
-              landing page about Yogurt. The page utilizes JavaScript functions
-              to create user interaction.
+              landing page about Puff puff. The page utilizes JavaScript
+              functions to create user interaction.
             </p>
             <a href="work.html" class="btn btn-branding-outline">
               Learn more
@@ -158,7 +158,7 @@
             <a
               href="contact.html"
               class="btn btn-branding mt-3"
-              title="Contact Patricia"
+              title="Contact Queen"
             >
               Contact me
             </a>
