--- a/work.html
+++ b/work.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SheCodes Portfolio</title>
+    <title>Queen's Portfolio</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -32,30 +32,30 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/" title="Homepage">
+        <a href="index.html" title="Homepage">
           <img
             src="images/logo.png"
             class="logo d-none d-md-block"
-            alt="Patricia Logo"
+            alt="Queen Logo"
           />
           <img
             src="images/logo-small.jpg"
             class="logo d-block d-md-none"
-            alt="Patricia Logo"
+            alt="Queen Logo"
           />
         </a>
         <ul>
           <li>
-            <a href="/" title="Homepage"> Home</a>
+            <a href="index.html" title="Homepage"> Home</a>
           </li>
           <li>
-            <a href="/about.html" title="About Patricia"> About</a>
+            <a href="about.html" title="About Queen"> About</a>
           </li>
           <li class="active">
-            <a href="/work.html" title="Patricia's work"> Work</a>
+            <a href="work.html" title="Queen's work"> Work</a>
           </li>
           <li>
-            <a href="/contact.html" title="Contact Patricia"> Contact</a>
+            <a href="contact.html" title="Contact Queen"> Contact</a>
           </li>
         </ul>
       </nav>
@@ -67,11 +67,11 @@
         <div class="row">
           <div class="col-md-6 mb-4">
             <img
-              src="images/yogurt.png"
+              src="images/puff.png"
               class="img-fluid mb-3 rounded"
-              alt="Yogurt project preview"
+              alt="Puff project preview"
             />
-            <h3 class="text-center m-0">Yogurt Landing Page</h3>
+            <h3 class="text-center m-0">Puff puff Landing Page</h3>
             <p class="text-center text-muted">
               Built with HTML, CSS, and JavaScript
             </p>
@@ -120,9 +120,9 @@
         </div>
         <div>
           <a
-            href="/contact.html"
+            href="contact.html"
             class="btn btn-branding mt-3"
-            title="Contact Patricia"
+            title="Contact Queen"
           >
             Contact me
           </a>
@@ -130,30 +130,30 @@
       </div>
       <div class="d-flex justify-content-center mb-5">
         <a
-          href="mailto:patricia@gmail.com"
+          href="mailto:iortyomqueen17@gmail.com"
           class="email-link"
-          title="Email Patricia"
+          title="Email Queen"
         >
-          patricia@gmail.com
+          iortyomqueen17@gmail.com
         </a>
       </div>
       <div class="social-links d-flex justify-content-center">
         <a
-          href="https://www.github.com/patricia"
+          href="https://www.github.com/Cuwein"
           target="_blank"
           title="GitHub Profile"
         >
           <i class="fab fa-github"></i>
         </a>
         <a
-          href="https://www.instragram.com/patricia"
+          href="https://www.instragram.com/__torkwase_"
           target="_blank"
           title="instragram Profile"
         >
           <i class="fab fa-instagram"></i>
         </a>
         <a
-          href="https://www.twitter.com/patricia"
+          href="https://www.twitter.com/Qwin❤"
           target="_blank"
           title="Twitter Profile"
         >
@@ -161,9 +161,9 @@
         </a>
       </div>
       <p class="text-center mt-5">
-        ✌️ This website was coded by Patricia Pereira, and is
+        ✌️ This website was coded by Iortyom Torkwase Queen, and is
         <a
-          href="https://github.com/matthieua/portfolio-project"
+          href="https://github.com/Cuwein/portfolio-project-seo"
           target="_blank"
         >
           open-sourced
