--- a/about.html
+++ b/about.html
@@ -33,16 +33,9 @@
     <div class="container">
       <nav class="d-flex justify-content-between">
         <a href="index.html" title="Homepage">
-          <img
-            src="images/logo.png"
-            class="logo d-none d-md-block"
-            alt="Patricia Logo"
-          />
-          <img
-            src="images/logo-small.jpg"
-            class="logo d-block d-md-none"
-            alt="Patricia Logo"
-          />
+         <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="index.html" title="Homepage"> Torkwase Iortyom </a>
         </a>
         <ul>
           <li>
