--- a/work.html
+++ b/work.html
@@ -32,7 +32,18 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="index.html" title="Homepage"> Torkwase Iortyom </a>
+        <a href="index.html" title="Homepage">
+          <img
+            src="images/logo.png"
+            class="logo d-none d-md-block"
+            alt="Queen Logo"
+          />
+          <img
+            src="images/logo-small.jpg"
+            class="logo d-block d-md-none"
+            alt="Queen Logo"
+          />
+        </a>
         <ul>
           <li>
             <a href="index.html" title="Homepage"> Home</a>
