--- a/contact.html
+++ b/contact.html
@@ -38,14 +38,9 @@
       <nav class="d-flex justify-content-between">
         <a href="index.html" title="Homepage">
           <img
-            src="images/logo.png"
+            src="images/queen-logo.png"
             class="logo d-none d-md-block"
-            alt="Patricia Logo"
-          />
-          <img
-            src="images/logo-small.jpg"
-            class="logo d-block d-md-none"
-            alt="Patricia Logo"
+            alt="Queen Logo"
           />
         </a>
         <ul>
